# textpy

./: .gitignore  .gitmodules  README.md  __init__.py  install.py  metadata.yml  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
examples/: myfile.py  this_is_a_file.py
src/: __init__.py  __version__.py  _typing.py  abc.py  core.py  doc.py  experimental.py  imports.py  interaction.py  text.py  texttree.py
src/textpy/: __init__.py  _version.py  css.py  interaction.py
src/utils/: __init__.py  auto_docstring_custom.mustache  re_extensions.py  validator.py
textpy/: __init__.py  __version__.py  _lazy.py  abc.py  core.py  doc.py  docfmt.py  element.py  format.py  text.py
textpy/utils/: __init__.py  auto_docstring_custom.mustache  re_extended.py  re_extensions.py
